--- a/GVRP_Entry_client_v2/src/app/app.component.html
+++ b/GVRP_Entry_client_v2/src/app/app.component.html
@@ -1,7 +1,1 @@
-<div style="height: 100vh; width: 100%;">
-  <div style="height: 100%;"
-       leaflet
-       [leafletOptions]="options"
-       (leafletMapReady)="onMapReady($event)">
-  </div>
-</div>
+<router-outlet></router-outlet>
