--- a/GVRP_Entry_client_v2/src/app/features/main/main.component.html
+++ b/GVRP_Entry_client_v2/src/app/features/main/main.component.html
@@ -36,10 +36,7 @@
 
       <!-- Table Section (40vh) -->
       <div class="table-section">
-        <app-orders-section
-          [orders]="orders"
-          [solution]="solution"
-          (orderSelectionChange)="onOrderSelectionChange($event)">
+        <app-orders-section>
         </app-orders-section>
       </div>
     </main>
