--- a/GVRP_Entry_client_v2/src/app/layouts/navbar/navbar.component.html
+++ b/GVRP_Entry_client_v2/src/app/layouts/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="navbar">
   <div class="navbar-left">
-    <button mat-icon-button (click)="toggleSidebar()">
+    <button mat-icon-button>
       <mat-icon>menu</mat-icon>
     </button>
     <div class="brand">
@@ -14,29 +14,29 @@
     <button mat-button
             class="nav-menu-item"
             [class.active]="activeTab === 'dashboard'"
-            (click)="onTabClick('dashboard')">
+            >
       Dashboard
     </button>
     <button mat-button
             class="nav-menu-item"
             [class.active]="activeTab === 'analysis'"
-            (click)="onTabClick('analysis')">
+    >
       Analysis
     </button>
     <button mat-button
             class="nav-menu-item"
             [class.active]="activeTab === 'history'"
-            (click)="onTabClick('history')">
+            >
       History
     </button>
   </div>
 
   <!-- Right Side -->
   <div class="navbar-right">
-    <span class="user-info" *ngIf="currentUser">
-      <mat-icon>person</mat-icon>
-      {{ currentUser.username }}
-    </span>
+<!--    <span class="user-info" *ngIf="currentUser">-->
+<!--      <mat-icon>person</mat-icon>-->
+<!--      {{ currentUser.username }}-->
+<!--    </span>-->
 
     <button mat-icon-button [matMenuTriggerFor]="userMenu">
       <mat-icon>more_vert</mat-icon>
@@ -47,7 +47,7 @@
         <mat-icon>settings</mat-icon>
         <span>Settings</span>
       </button>
-      <button mat-menu-item (click)="onLogout()">
+      <button mat-menu-item >
         <mat-icon>exit_to_app</mat-icon>
         <span>Logout</span>
       </button>
