--- a/GVRP_Entry_client_v2/src/app/layouts/sidebar/sidebar.component.scss
+++ b/GVRP_Entry_client_v2/src/app/layouts/sidebar/sidebar.component.scss
@@ -1,7 +1,8 @@
 @import '../../../assets/styles/variables';
 
 .sidebar {
-  width: 30%;
+  width: 100%;
+  height: 100%;
   background: white;
   border-right: 1px solid var(--border-color);
   overflow-y: auto;
