--- a/GVRP_Entry_client_v2/src/app/layouts/main-layout/main-layout.component.scss
+++ b/GVRP_Entry_client_v2/src/app/layouts/main-layout/main-layout.component.scss
@@ -1,37 +1,40 @@
-// Khung lớn nhất: Xếp theo chiều dọc (Column)
+:host {
+  display: block;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
 .layout-container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   width: 100vw;
   overflow: hidden;
+  background: var(--bg-light);
 }
 
 .navbar-wrapper {
   width: 100%;
+  height: var(--navbar-height);
   flex-shrink: 0;
-  // height: 60px; // Bạn có thể set cứng chiều cao ở đây nếu muốn
+  z-index: var(--z-navbar);
+  position: sticky;
+  top: 0;
 }
 
 .content-container {
   display: flex;
   flex: 1;
-  width: 100%;
-  overflow: hidden;
-}
-
-.sidebar-wrapper {
-  flex: 0 0 30%;
-  min-width: 250px;
-  max-width: 400px;
-  border-right: 1px solid var(--border-color);
-  background-color: var(--surface-color);
-}
-
-.main-wrapper {
-  flex: 0 0 70%;
-  display: flex;
   flex-direction: column;
+  position: relative;
+  width: 100%;
+  height: calc(100vh - var(--navbar-height));
   overflow: hidden;
-  background-color: var(--background-color);
+}
+
+@media (max-width: 768px) {
+  .content-container {
+    flex-direction: column;
+  }
 }
